Fix fonts on mobile

--- a/src/assets/css/source.css
+++ b/src/assets/css/source.css
@@ -163,28 +163,27 @@
         }
         body,
         .article {
-            font-family: sans-serif;
-            font-family: "Merriweather", serif;
             font-size: 18px;
             line-height: 28px;
             max-width: 560px;
             margin: auto;
+            @apply font-serif;
         }
         h1,
         .h1 {
-            font-family: Poppins, sans-serif;
             font-size: 36px;
             line-height: 56px;
             margin-top: 28px;
             margin-bottom: 28px;
+            @apply font-poppins;
         }
         h2,
         .h2 {
-            font-family: "Fira Sans Condensed", sans-serif;
             font-size: 29px;
             line-height: 28px;
             margin-top: 28px;
             margin-bottom: 28px;
+            @apply font-fira;
         }
         h3,
         .h3 {
